@@ -5,7 +5,7 @@ use warnings;
 use Test::More;
 
 # Ensure a recent version of Test::Pod
-my $min_tp = 1.22;
+my $min_tp = 1.44;
 eval "use Test::Pod $min_tp";
 plan skip_all => "Test::Pod $min_tp required for testing POD" if $@;
 
